--- a/SheldonMRossNotes.tex
+++ b/SheldonMRossNotes.tex
@@ -30,7 +30,7 @@
 \newcommand\Myperm[2][^n]{\prescript{#1\mkern-2.5mu}{}P_{#2}}
 \newcommand\Mycomb[2][^n]{\prescript{#1\mkern-0.5mu}{}C_{#2}}
 \newcommand\ddfrac[2]{\frac{\displaystyle #1}{\displaystyle #2}}
-
+\pagenumbering{gobble}
 
 \begin{document}
 
@@ -42,20 +42,15 @@
 \tableofcontents
 
 %\include{./TeX_files/chapter01}
-%\include{./TeX_files/exercise01}
 %\include{./TeX_files/chapter02}
-%\include{./TeX_files/exercise02}
 %\include{./TeX_files/chapter03}
-%\include{./TeX_files/exercise03}
 %\include{./TeX_files/chapter04}
-%\include{./TeX_files/exercise04}
 %\include{./TeX_files/chapter05}
-%\include{./TeX_files/exercise05}
 %\include{./TeX_files/chapter06}
-%\include{./TeX_files/exercise06}
-\include{./TeX_files/chapter07}
-%\include{./TeX_files/exercise07}
-\include{./TeX_files/chapter08}
+%\include{./TeX_files/chapter07}
+%\include{./TeX_files/chapter08}
+\include{./TeX_files/chapter09}
+\include{./TeX_files/chapter10}
 % bibliography, glossary and index would go here.
 
 \end{document}
